multi: surface endorsement signal on sendpayment rpc
An enum is used to allow differentiating between the sender leaving
it up to LND to pick endorsement signaling and explicit true/false
values.
